# NDK-demo

./: gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  vulkan_ui.cpp
app/src/main/cpp/vulkan/: VulkanSetup.cpp  VulkanSetup.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
